--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
-    "systemjs": "0.19.22",
+    "angular2": "2.0.0-beta.15",
+    "systemjs": "0.19.26",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15"
+    "zone.js": "^0.6.10"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.1.0",
-    "typescript": "^1.7.5"
+    "typescript": "^1.8.10"
   }
 }
