--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 .DS_Store
-/node_modules/
-npm-debug.log
-typings
 .vscode
+.idea
+typings/**
+node_modules
+jspm_packages
+link-checker-results.txt
+**/*npm-debug.log.*
+*.js
+*.js.map
+_test-output
+_temp
+
+!**/*e2e-spec.js
+!karma*.js
+!protractor*.js
+!systemjs.config.js
+!typings/typings.d.ts
+!wallaby.js
