Changes to deploy app on GAE.

--- a/app.yaml
+++ b/app.yaml
@@ -4,5 +4,5 @@ vm: true
 # [END runtime]
 
 # Temporary setting to keep gcloud from uploading node_modules
-#skip_files:
-# - ^node_modules$
+skip_files:
+ - ^node_modules$
